Added nav, prepping for suspense query, updating layouts

--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@ a:hover {
 
 body, html {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 #root {
